@@ -1,10 +1,15 @@
 package dev.mouradski.prices.utils;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class Constants {
-    public static final List<String> USD_USDT_USDC_BUSD = Arrays.asList("usd", "usdt", "usdc", "busd");
-    public static final List<String> USD_USDT_USDC = Arrays.asList("usd", "usdt", "usdc");
-    public static final List<String> SYMBOLS = Arrays.asList("xrp", "btc", "eth", "algo", "xlm", "ada", "matic", "sol", "fil", "flr", "sgb", "doge", "xdc", "arb", "avax", "bnb", "usdc", "busd", "usdt");
+    public static final String USD = "usd";
+    public static final String USDT = "usdt";
+    public static final String USDC = "usdc";
+    public static final String BUSD = "busd";
+
+    public static final List<String> USD_USDT_USDC_BUSD = List.of(USD, USDT, USDC, BUSD);
+    public static final List<String> USD_USDT_USDC = List.of(USD, USDT, USDC);
+
+    public static final List<String> SYMBOLS = List.of("xrp", "btc", "eth", "algo", "xlm", "ada", "matic", "sol", "fil", "flr", "sgb", "doge", "xdc", "arb", "avax", "bnb", "usdc", "busd", "usdt");
 }
